kustomize/maybe/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","traefik.ingress.kubernetes.io/router.entrypoints":"websecure"},"name":"maybe","namespace":"maybe"},"spec":{"rules":[{"host":"maybe.stillon.top","http":{"paths":[{"backend":{"service":{"name":"maybe","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["maybe.stillon.top"],"secretName":"maybe-tls"}]}}
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
    creationTimestamp: "2024-05-19T15:02:52Z"
    generation: 1
    name: maybe
    namespace: maybe
    resourceVersion: "11863813"
    uid: 90369e68-5a60-4716-a678-23c8fd86bef7
  spec:
    ingressClassName: traefik
    rules:
    - host: maybe.stillon.top
      http:
        paths:
        - backend:
            service:
              name: maybe
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - maybe.stillon.top
      secretName: maybe-tls
  status:
    loadBalancer:
      ingress:
      - ip: 161.97.88.129
kind: List
metadata:
  resourceVersion: ""
